Fix #33330: Proxies are not built in Sequencer if preview is visible

Was own regression when was solving conflict between sequencer preview
and compositor jobs. Made it so now only compositor jobs are being
killed from sequencer preview.